# locked-poll

./: .gitignore  ChangeLog.md  README.md  locked-poll.cabal  stack.yaml
src/: LockedPoll.hs  Main.hs
src/LockedPoll/: Internal.hs
test/: LockedPollSpec.hs  Spec.hs
