Name:                   locked-poll
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Very simple poll lock
Description:            Fire and forget actions, lock with timeout resources 
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -Werror
  Exposed-Modules:      LockedPoll
                        LockedPoll.Internal
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
                      , containers
                      , clock

executable locked-poll
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -Werror
  main-is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , containers 
                      , locked-poll
                      , clock

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -Werror
  Main-Is:              Spec.hs
  Other-Modules:        LockedPoll
                      , LockedPollSpec
  Build-Depends:        QuickCheck
                      , base
                      , containers 
                      , regex-genex
                      , tasty
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , clock
                      , lens
                      , random
                      , bytestring
                      , time
                      , attoparsec
                      , directory

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/locked-poll.git
